// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`number key empty left, empty right 1`] = `Array []`;

exports[`number key empty left, one right 1`] = `Array []`;

exports[`number key one left, empty right 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": 59105,
    },
  },
]
`;

exports[`number key one left, one right match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": 59105,
    },
    "one right match": Object {
      "Ferry": 59105,
    },
  },
]
`;

exports[`number key one left, one right non-match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": 59105,
    },
  },
]
`;

exports[`number key one left, two right multiple match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": 59105,
    },
    "two right multiple match": Object {
      "Ferry": 59105,
    },
  },
  Object {
    "one left": Object {
      "Connecticut": 59105,
    },
    "two right multiple match": Object {
      "Ferry": 59105,
    },
  },
]
`;

exports[`number key two left, one right match 1`] = `
Array [
  Object {
    "one right match": Object {
      "Ferry": 59105,
    },
    "two left": Object {
      "Connecticut": 59105,
    },
  },
  Object {
    "two left": Object {
      "Connecticut": 74569,
    },
  },
]
`;

exports[`number key two left, three right different match w/ one multiple 1`] = `
Array [
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": 59105,
    },
    "two left": Object {
      "Connecticut": 59105,
    },
  },
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": 74569,
    },
    "two left": Object {
      "Connecticut": 74569,
    },
  },
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": 74569,
    },
    "two left": Object {
      "Connecticut": 74569,
    },
  },
]
`;

exports[`number key two left, two right different match 1`] = `
Array [
  Object {
    "two left": Object {
      "Connecticut": 59105,
    },
    "two right different match": Object {
      "Ferry": 59105,
    },
  },
  Object {
    "two left": Object {
      "Connecticut": 74569,
    },
    "two right different match": Object {
      "Ferry": 74569,
    },
  },
]
`;

exports[`number key two left, two right same match 1`] = `
Array [
  Object {
    "two left": Object {
      "Connecticut": 59105,
    },
    "two right same match": Object {
      "Ferry": 59105,
    },
  },
  Object {
    "two left": Object {
      "Connecticut": 59105,
    },
    "two right same match": Object {
      "Ferry": 59105,
    },
  },
]
`;

exports[`object identity key empty left, empty right 1`] = `Array []`;

exports[`object identity key empty left, one right 1`] = `Array []`;

exports[`object identity key one left, empty right 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
  },
]
`;

exports[`object identity key one left, one right match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
    "one right match": Object {
      "Ferry": Object {
        "red": "global",
      },
    },
  },
]
`;

exports[`object identity key one left, one right non-match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
  },
]
`;

exports[`object identity key one left, two right multiple match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
    "two right multiple match": Object {
      "Ferry": Object {
        "red": "global",
      },
    },
  },
  Object {
    "one left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
    "two right multiple match": Object {
      "Ferry": Object {
        "red": "global",
      },
    },
  },
]
`;

exports[`object identity key two left, one right match 1`] = `
Array [
  Object {
    "one right match": Object {
      "Ferry": Object {
        "red": "global",
      },
    },
    "two left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
  },
  Object {
    "two left": Object {
      "Connecticut": Object {
        "SMTP": "Kip",
      },
    },
  },
]
`;

exports[`object identity key two left, three right different match w/ one multiple 1`] = `
Array [
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": Object {
        "red": "global",
      },
    },
    "two left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
  },
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": Object {
        "SMTP": "Kip",
      },
    },
    "two left": Object {
      "Connecticut": Object {
        "SMTP": "Kip",
      },
    },
  },
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": Object {
        "SMTP": "Kip",
      },
    },
    "two left": Object {
      "Connecticut": Object {
        "SMTP": "Kip",
      },
    },
  },
]
`;

exports[`object identity key two left, two right different match 1`] = `
Array [
  Object {
    "two left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
    "two right different match": Object {
      "Ferry": Object {
        "red": "global",
      },
    },
  },
  Object {
    "two left": Object {
      "Connecticut": Object {
        "SMTP": "Kip",
      },
    },
    "two right different match": Object {
      "Ferry": Object {
        "SMTP": "Kip",
      },
    },
  },
]
`;

exports[`object identity key two left, two right same match 1`] = `
Array [
  Object {
    "two left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
    "two right same match": Object {
      "Ferry": Object {
        "red": "global",
      },
    },
  },
  Object {
    "two left": Object {
      "Connecticut": Object {
        "red": "global",
      },
    },
    "two right same match": Object {
      "Ferry": Object {
        "red": "global",
      },
    },
  },
]
`;

exports[`string key empty left, empty right 1`] = `Array []`;

exports[`string key empty left, one right 1`] = `Array []`;

exports[`string key one left, empty right 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": "redundant",
    },
  },
]
`;

exports[`string key one left, one right match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": "redundant",
    },
    "one right match": Object {
      "Ferry": "redundant",
    },
  },
]
`;

exports[`string key one left, one right non-match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": "redundant",
    },
  },
]
`;

exports[`string key one left, two right multiple match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": "redundant",
    },
    "two right multiple match": Object {
      "Ferry": "redundant",
    },
  },
  Object {
    "one left": Object {
      "Connecticut": "redundant",
    },
    "two right multiple match": Object {
      "Ferry": "redundant",
    },
  },
]
`;

exports[`string key two left, one right match 1`] = `
Array [
  Object {
    "one right match": Object {
      "Ferry": "redundant",
    },
    "two left": Object {
      "Connecticut": "redundant",
    },
  },
  Object {
    "two left": Object {
      "Connecticut": "Oval",
    },
  },
]
`;

exports[`string key two left, three right different match w/ one multiple 1`] = `
Array [
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": "redundant",
    },
    "two left": Object {
      "Connecticut": "redundant",
    },
  },
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": "Oval",
    },
    "two left": Object {
      "Connecticut": "Oval",
    },
  },
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": "Oval",
    },
    "two left": Object {
      "Connecticut": "Oval",
    },
  },
]
`;

exports[`string key two left, two right different match 1`] = `
Array [
  Object {
    "two left": Object {
      "Connecticut": "redundant",
    },
    "two right different match": Object {
      "Ferry": "redundant",
    },
  },
  Object {
    "two left": Object {
      "Connecticut": "Oval",
    },
    "two right different match": Object {
      "Ferry": "Oval",
    },
  },
]
`;

exports[`string key two left, two right same match 1`] = `
Array [
  Object {
    "two left": Object {
      "Connecticut": "redundant",
    },
    "two right same match": Object {
      "Ferry": "redundant",
    },
  },
  Object {
    "two left": Object {
      "Connecticut": "redundant",
    },
    "two right same match": Object {
      "Ferry": "redundant",
    },
  },
]
`;

exports[`symbol key empty left, empty right 1`] = `Array []`;

exports[`symbol key empty left, one right 1`] = `Array []`;

exports[`symbol key one left, empty right 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": Symbol(valueOne),
    },
  },
]
`;

exports[`symbol key one left, one right match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": Symbol(valueOne),
    },
    "one right match": Object {
      "Ferry": Symbol(valueOne),
    },
  },
]
`;

exports[`symbol key one left, one right non-match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": Symbol(valueOne),
    },
  },
]
`;

exports[`symbol key one left, two right multiple match 1`] = `
Array [
  Object {
    "one left": Object {
      "Connecticut": Symbol(valueOne),
    },
    "two right multiple match": Object {
      "Ferry": Symbol(valueOne),
    },
  },
  Object {
    "one left": Object {
      "Connecticut": Symbol(valueOne),
    },
    "two right multiple match": Object {
      "Ferry": Symbol(valueOne),
    },
  },
]
`;

exports[`symbol key two left, one right match 1`] = `
Array [
  Object {
    "one right match": Object {
      "Ferry": Symbol(valueOne),
    },
    "two left": Object {
      "Connecticut": Symbol(valueOne),
    },
  },
  Object {
    "two left": Object {
      "Connecticut": Symbol(valueTwo),
    },
  },
]
`;

exports[`symbol key two left, three right different match w/ one multiple 1`] = `
Array [
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": Symbol(valueOne),
    },
    "two left": Object {
      "Connecticut": Symbol(valueOne),
    },
  },
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": Symbol(valueTwo),
    },
    "two left": Object {
      "Connecticut": Symbol(valueTwo),
    },
  },
  Object {
    "three right different match w/ one multiple": Object {
      "Ferry": Symbol(valueTwo),
    },
    "two left": Object {
      "Connecticut": Symbol(valueTwo),
    },
  },
]
`;

exports[`symbol key two left, two right different match 1`] = `
Array [
  Object {
    "two left": Object {
      "Connecticut": Symbol(valueOne),
    },
    "two right different match": Object {
      "Ferry": Symbol(valueOne),
    },
  },
  Object {
    "two left": Object {
      "Connecticut": Symbol(valueTwo),
    },
    "two right different match": Object {
      "Ferry": Symbol(valueTwo),
    },
  },
]
`;

exports[`symbol key two left, two right same match 1`] = `
Array [
  Object {
    "two left": Object {
      "Connecticut": Symbol(valueOne),
    },
    "two right same match": Object {
      "Ferry": Symbol(valueOne),
    },
  },
  Object {
    "two left": Object {
      "Connecticut": Symbol(valueOne),
    },
    "two right same match": Object {
      "Ferry": Symbol(valueOne),
    },
  },
]
`;
